--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -18,6 +18,8 @@
     border: 1px solid rgba(36, 36, 36, 0.247);
     font-size: 150%;
     .cell-icon{
+      min-height: 25px;
+      color: transparent;
       width:100%;
       height: 100%;
       background-repeat: no-repeat;
